--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <!-- encabezado (header) y banner-->
+    <!-- encabezado (header) y banner también-->
     <header class="contenedorBanner">
         <nav class="navbar navbar-expand-lg bg-body-transparent header" data-bs-theme="dark">
             <div class="container-fluid">
