proyecto final con un detalle más agregado

--- a/Index.html
+++ b/Index.html
@@ -106,9 +106,7 @@
             <p> Conocé los mejores rincones de nuestra provincia y miles de actividades para hacer! </p>
 
             <div class="link">
-                <a href="html/lugares.html" class="enlace">
-                    Chusmealos acá!
-                </a>
+                <a href="html/lugares.html" class="enlace"> Deslumbrate acá! </a>
             </div>
 
             <div class="gridFotos">
