--- a/html/destinos.html
+++ b/html/destinos.html
@@ -86,7 +86,7 @@
             <div class="card">
                 <img class="img-fluid" src="../img/cards/manzana.jpg" alt="manzana jesuítica" class="fotoCard">
                 <h3> Manzana Jesuítica</h3>
-                <p class="parrafoCard"> Declarada Patrimonio de la Humanidad por la UNESCO, es un punto obligado de
+                <p class="parrafoCard"> Declarada Patrimonio de la Humanidad por la UNESCO, es un sitio obligado de
                     visita. </p>
                 <a href="#" class="btnCard">Mirá más</a>
             </div>
@@ -94,7 +94,7 @@
             <div class="card">
                 <img class="img-fluid" src="../img/cards/paseo.jpg" alt="paseo de las artes" class="fotoCard">
                 <h3> Paseo de las artes</h3>
-                <p class="parrafoCard"> A orillas de la Cañada, es un punto de encuentro para chusmear productos pura y
+                <p class="parrafoCard"> A orillas de la Cañada, es un lugar de encuentro para chusmear productos pura y
                     exclusivamente artesanales </p>
                 <a href="#" class="btnCard">Mirá más</a>
             </div>
