--- a/html/lugares.html
+++ b/html/lugares.html
@@ -87,7 +87,7 @@
                 <img class="img-fluid" src="../img/cards/mirador7.jpg" alt="mirador sierras" class="fotoCard">
                 <h3> Mirador soñado en las Alta Cumbres</h3>
                 <p class="parrafoCard"> Brinda una experiencia única para el visitante y una oportunidad para apreciar
-                    este histórico lugar </p>
+                    este magnífico lugar </p>
                 <a href="#" class="btnCard"> Mirá más </a>
             </div>
 
