--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
             <div class="container-fluid">
                 <!-- logo -->
                 <a class="navbar-brand" href="index.html">
-                    <img class="img-fluid" src="img/logo-sinfondo.PNG" alt="Logo cordo" class="logo">
+                    <img class="img-fluid" src="img/logo-nuevo-transparente2.png" alt="Logo cordo" class="logo">
                 </a>
                 <button class="navbar-toggler shadow-none border-0 menu" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -36,7 +36,8 @@
                 <div class="sidebar offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header border-bottom">
-                        <img class="img-fluid" src="img/logo-sinfondo.PNG" alt="Logo cordo" class="logoSideBar">
+                        <img class="img-fluid" src="img/logo-nuevo-transparente2.png" alt="Logo cordo"
+                            class="logoSideBar">
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
                     </div>
