--- a/html/imagenes.html
+++ b/html/imagenes.html
@@ -25,7 +25,7 @@
         <div class="container-fluid">
             <!-- logo -->
             <a class="navbar-brand" href="../index.html">
-                <img class="img-fluid" src="../img/logonegro-sinfondo.PNG" alt="logo cordo" class="logo">
+                <img class="img-fluid" src="../img/logo-nuevo-transparente-negro2.png" alt="logo cordo" class="logo">
             </a>
             <button class="navbar-toggler shadow-none border-0 " type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
             <div class=" sidebargal offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header border-bottom">
-                    <img class="img-fluid" src="../img/logonegro-sinfondo.PNG" alt="Logo de empresa"
+                    <img class="img-fluid" src="../img/logo-nuevo-transparente-negro2.png" alt="Logo de empresa"
                         class="logoSideBar">
                     <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
@@ -101,7 +101,7 @@
     </footer>
 
 
-    <script src="https://kit.fontawesome.com/61c791da8a.js" crossorigin="anonymous"></script>
+
     <!-- boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
