--- a/html/tours.html
+++ b/html/tours.html
@@ -28,7 +28,8 @@
             <div class="container-fluid">
                 <!-- logo -->
                 <a class="navbar-brand" href="../index.html">
-                    <img class="img-fluid" src="../img/logonegro-sinfondo.PNG" alt="Logo de empresa" class="logo">
+                    <img class="img-fluid" src="../img/logo-nuevo-transparente-negro2.png" alt="Logo de empresa"
+                        class="logo">
                 </a>
                 <button class="navbar-toggler shadow-none border-0 " type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -37,7 +38,7 @@
                 <div class="sidebargal offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header border-bottom">
-                        <img class="img-fluid" src="../img/logonegro-sinfondo.PNG" alt="Logo de empresa"
+                        <img class="img-fluid" src="../img/logo-nuevo-transparente-negro2.png" alt="Logo de empresa"
                             class="logoSideBar">
                         <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
