--- a/Index.html
+++ b/Index.html
@@ -177,4 +177,6 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/61c791da8a.js" crossorigin="anonymous"></script>
+
+    <script src="js/script.js"></script>
 </body>
